[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Crosshair.gd" type="Script" id=2]
[ext_resource path="res://sounds/sfx/Gunshot3.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[node name="Crosshair" type="Sprite"]
visible = false
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
